include note about priacy in getting started

--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -26,17 +26,16 @@ language: python
             </p>
 
             <pre><code>import plotly.plotly as py
-from plotly.graph_objs import *
+from plotly.graph_objs import Scatter
 
-trace0 = Scatter(
-    x=[1, 2, 3, 4],
+trace0 = Scatter(x=[1, 2, 3, 4],
     y=[10, 15, 13, 17]
 )
 trace1 = Scatter(
     x=[1, 2, 3, 4],
     y=[16, 5, 11, 9]
 )
-data = Data([trace0, trace1])
+data = [trace0, trace1]
 
 unique_url = py.plot(data, filename = 'basic-line')</code></pre>
 
@@ -47,8 +46,24 @@ unique_url = py.plot(data, filename = 'basic-line')</code></pre>
                 You can also create plotly graphs within an <strong>IPython
                     notebook</strong>. Learn more in our <a class="link--bold link--impt" href="https://plot.ly/ipython-notebooks/">IPython notebook documentation</a>.
             </p>
+
+            <p>
+                By default, plotly graphs are <b>public</b> and saved to <a href="https://plot.ly/organize">your online plotly account</a>.
+
+                To create graphs offline and locally, <a href="https://plot.ly/python/offline">license plotly offline</a>.
+                To create private graphs, set <code>sharing</code> to <code>'private'</code>:
+
+                <pre><code>py.plot(data, share='private', filename='private-plot') # you'll need to be logged in to plotly to view this graph</code></pre>
+
+                or, create a randomized "secret" URL:<br>
+                <pre><code>py.plot(data, share='secret', filename='secret-plot') # anybody with the URL can view the plot</code></pre>
+
+                <a href="https://plot.ly/python/privacy">Learn more about private charting.</a>
+            </p>
+
         </div>
     </section>
+
 
     {% include credentials.html %}
 
