--- a/_posts/plotly_js/3d-cluster/2015-08-10-3d-point-cluster.html
+++ b/_posts/plotly_js/3d-cluster/2015-08-10-3d-point-cluster.html
@@ -75,7 +75,7 @@ function threeDCluster(xValues, yValues, zValues, divID){
               },
               eye: {
                   x: 1.25,
-                  y: 1.2500000000000002,
+                  y: 1.25,
                   z: 1.25
               },
               up: {
@@ -102,5 +102,5 @@ function threeDCluster(xValues, yValues, zValues, divID){
   }
 
 
-  Plotly.plot('myDiv', data, layout);
+  Plotly.newPlot('myDiv', data, layout);
   };
