--- a/_posts/plotly_js/area/2015-04-09-stacked-area.html
+++ b/_posts/plotly_js/area/2015-04-09-stacked-area.html
@@ -7,7 +7,7 @@ order: 2
 sitemap: false
 arrangement: horizontal
 ---
-var plotDiv = document.getElementById("plot");
+var plotDiv = document.getElementById('plot);
 var traces = [
 	{x: [1,2,3], y: [2,1,4], fill: 'tozeroy'},
 	{x: [1,2,3], y: [1,1,2], fill: 'tonexty'},
