--- a/_posts/plotly_js/bubble-maps/2015-07-11-bubble-map.html
+++ b/_posts/plotly_js/bubble-maps/2015-07-11-bubble-map.html
@@ -36,5 +36,5 @@ function scattergeobubbles() {
         }
     };
 
-    Plotly.plot('myDiv', data, layout);
+    Plotly.newPlot('myDiv', data, layout);
 }
