--- a/_posts/plotly_js/callbacks-buttons/2015-04-09-button-bind.html
+++ b/_posts/plotly_js/callbacks-buttons/2015-04-09-button-bind.html
@@ -19,15 +19,15 @@ var y1 = d3.range(100).map(d3.random.normal(6)),
       y:y2, marker: {color: '#FFD966'}
     }];
 
-Plotly.plot("myDiv", data, layout);
+Plotly.plot('myDiv', data, layout);
 
 $('.hideshow button').click(function(){
     var btn_id = this.parentNode.id,
         data_index = ( btn_id === 'top' ) ? 0 : 1,
-        myDiv = document.getElementById("myDiv"),
+        myDiv = document.getElementById('myDiv'),
         visible = myDiv.data[data_index].visible;
 
     if( visible === undefined ) visible = true;
 
-    Plotly.restyle("myDiv", 'visible', !visible, data_index);
+    Plotly.restyle('myDiv', 'visible', !visible, data_index);
 });
