--- a/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-north-america.html
+++ b/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-north-america.html
@@ -57,5 +57,5 @@ function choroplethusa() {
         },
     };
 
-    Plotly.plot("myDiv", data, layout);
+    Plotly.newPlot('myDiv', data, layout);
 }
