--- a/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-world-robinson.html
+++ b/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-world-robinson.html
@@ -88,5 +88,5 @@ function choroplethworld() {
         }
     };
 
-    Plotly.plot("myDiv", data, layout);
+    Plotly.newPlot('myDiv', data, layout);
 }
