--- a/_posts/plotly_js/error-bar/2015-04-09-percent-error-bar.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-percent-error-bar.html
@@ -12,11 +12,11 @@ var data = [
     x: [0, 1, 2],
     y: [6, 10, 2],
     error_y: {
-      type: "percent",
+      type: 'percent',
       value: 50,
       visible: true
     },
-    type: "scatter"
+    type: 'scatter'
   }
 ];
-Plotly.plot("myDiv", data);
+Plotly.newPlot('myDiv', data);
