--- a/_posts/plotly_js/histogram/2015-04-09-style-histogram.html
+++ b/_posts/plotly_js/histogram/2015-04-09-style-histogram.html
@@ -55,4 +55,4 @@ var layout = {
   bargap: 0.25,
   bargroupgap: 0.3
 };
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
