--- a/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-canadian-cities.html
+++ b/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-canadian-cities.html
@@ -6,19 +6,19 @@ suite: scatter-plots-on-maps
 order: 1
 sitemap: false
 ---
-function scattergeomarkers("myDiv") {
+function scattergeomarkers('myDiv') {
     // By default, geographic data is loaded asynchronously from
     // the topojson subdirectory located at the root of the plotlyjs directory.
     //
     // To remove this asynchronous step, include:
-    // <script type="text/javascript" src="topojson/plotly-geo-assets.min.js"></script>
-    // after "plotly.min.js".
+    // <script type='text/javascript' src='topojson/plotly-geo-assets.min.js'></script>
+    // after 'plotly.min.js'.
     // Note that this bundle is quite large.
     // Serving it from a network is not recommended.
     //
     // If you choose to rename or move the topojson subdirectory, include
-    // <script>PLOTLYENV={TOPOJSON_URL:"path/to/topojson/"};</script>
-    // after "plotly.min.js"
+    // <script>PLOTLYENV={TOPOJSON_URL:'path/to/topojson/'};</script>
+    // after 'plotly.min.js'
 
     var data = [{
         type: 'scattergeo',
@@ -82,5 +82,5 @@ function scattergeomarkers("myDiv") {
         }
     };
 
-    Plotly.plot("myDiv", data, layout);
+    Plotly.newPlot('myDiv', data, layout);
 }
