--- a/_posts/plotly_js/scatter-plot-on-maps/2015-08-12-US-airport-map.html
+++ b/_posts/plotly_js/scatter-plot-on-maps/2015-08-12-US-airport-map.html
@@ -54,5 +54,5 @@ function scattergeomarkers() {
       }
   };
 
-  Plotly.plot('myDiv', data, layout);
+  Plotly.newPlot('myDiv', data, layout);
 };
