--- a/_posts/plotly_js/choropleth-maps/2015-08-10-countrygdp-choropleth-map.html
+++ b/_posts/plotly_js/choropleth-maps/2015-08-10-countrygdp-choropleth-map.html
@@ -49,5 +49,5 @@ function choroplethworld() {
         }
     };
 
-    Plotly.plot('myDiv', data, layout);
+    Plotly.newPlot('myDiv', data, layout);
 }
