--- a/_posts/plotly_js/error-bar/2015-04-09-basic-error-bar.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-basic-error-bar.html
@@ -5,18 +5,17 @@ language: plotly_js
 suite: error-bar
 order: 1
 sitemap: false
-
 ---
 var data = [
   {
     x: [0, 1, 2],
     y: [6, 10, 2],
     error_y: {
-      type: "data",
+      type: 'data',
       array: [1, 2, 3],
       visible: true
     },
-    type: "scatter"
+    type: 'scatter'
   }
 ];
-Plotly.plot("myDiv", data);
+Plotly.newPlot('myDiv', data);
