--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-array.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-array.html
@@ -5,19 +5,18 @@ language: plotly_js
 suite: error-bar
 order: 4
 sitemap: false
-
 ---
 var data = [
   {
     x: [1, 2, 3, 4],
     y: [2, 1, 3, 4],
     error_y: {
-      type: "data",
+      type: 'data',
       symmetric: false,
       array: [0.1, 0.2, 0.1, 0.1],
       arrayminus: [0.2, 0.4, 1, 0.2]
     },
-    type: "scatter"
+    type: 'scatter'
   }
 ];
-Plotly.plot("myDiv", data);
+Plotly.newPlot('myDiv', data);
