--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-constant.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-asymmetric-constant.html
@@ -12,12 +12,12 @@ var data = [
     x: [1, 2, 3, 4],
     y: [2, 1, 3, 4],
     error_y: {
-      type: "percent",
+      type: 'percent',
       symmetric: false,
       value: 15,
       valueminus: 25
     },
-    type: "scatter"
+    type: 'scatter'
   }
 ];
-Plotly.plot("myDiv", data);
+Plotly.newPlot('myDiv', data);
