--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-bar.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-bar.html
@@ -5,30 +5,29 @@ language: plotly_js
 suite: error-bar
 order: 2
 sitemap: false
-
 ---
 var trace1 = {
-  x: ["Trial 1", "Trial 2", "Trial 3"],
+  x: ['Trial 1', 'Trial 2', 'Trial 3'],
   y: [3, 6, 4],
-  name: "Control",
+  name: 'Control',
   error_y: {
-    type: "data",
+    type: 'data',
     array: [1, 0.5, 1.5],
     visible: true
   },
-  type: "bar"
+  type: 'bar'
 };
 var trace2 = {
-  x: ["Trial 1", "Trial 2", "Trial 3"],
+  x: ['Trial 1', 'Trial 2', 'Trial 3'],
   y: [4, 7, 3],
-  name: "Experimental",
+  name: 'Experimental',
   error_y: {
-    type: "data",
+    type: 'data',
     array: [0.5, 1, 2],
     visible: true
   },
-  type: "bar"
+  type: 'bar'
 };
 var data = [trace1, trace2];
-var layout = {barmode: "group"};
-Plotly.plot("myDiv", data, layout);
+var layout = {barmode: 'group'};
+Plotly.newPlot('myDiv', data, layout);
