--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar-horizontal.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar-horizontal.html
@@ -5,17 +5,16 @@ language: plotly_js
 suite: error-bar
 order: 3
 sitemap: false
-
 ---
 var data = [
   {
     x: [1, 2, 3, 4],
     y: [2, 1, 3, 4],
     error_x: {
-      type: "percent",
+      type: 'percent',
       value: 10
     },
-    type: "scatter"
+    type: 'scatter'
   }
 ];
-Plotly.plot("myDiv", data);
+Plotly.newPlot('myDiv', data);
