--- a/_posts/plotly_js/scatter-plot-on-maps/2015-08-15-north-america-percipitation-map.html
+++ b/_posts/plotly_js/scatter-plot-on-maps/2015-08-15-north-america-percipitation-map.html
@@ -75,5 +75,5 @@ function scattergeomarkers() {
       height: 600
     };
 
-    Plotly.plot('myDiv', data, layout);
+    Plotly.newPlot('myDiv', data, layout);
 }
