Escaped Characters for Code Sections
replace < with &lt;

--- a/_posts/plotly_js/ajax-call/2015-08-12-plotting-csv-data-from-ajax.html
+++ b/_posts/plotly_js/ajax-call/2015-08-12-plotting-csv-data-from-ajax.html
@@ -23,7 +23,7 @@ function processData(allText) {
     var y = [];
     var standard_deviation = [];
 
-    for (var i = 1; i < allTextLines.length; i++) {
+    for (var i = 1; i &lt; allTextLines.length; i++) {
         var data = allTextLines[i].split(',');
         if (data.length == headers.length) {
         x.push( data[1] );
