--- a/_posts/plotly_js/bar/2015-08-07-barchart-direct-labels.html
+++ b/_posts/plotly_js/bar/2015-08-07-barchart-direct-labels.html
@@ -36,7 +36,7 @@ layout = {
   annotations: annotationContent
 };
 
-for( var i = 0 ; i < xValue.length ; i++ ){
+for( var i = 0 ; i &lt; xValue.length ; i++ ){
   var result = {
     x: xValue[i],
     y: yValue[i],
