--- a/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
+++ b/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
@@ -83,7 +83,7 @@ var layout = {
   annotations: []
 };
 
-for ( var i = 0 ; i < 7 ; i++ ) {
+for ( var i = 0 ; i &lt; 7 ; i++ ) {
   var result = {
     x: xData[i],
     y: yData[i],
