--- a/_posts/plotly_js/box/2015-04-09-basic-box-plot.html
+++ b/_posts/plotly_js/box/2015-04-09-basic-box-plot.html
@@ -6,7 +6,7 @@ suite: box
 order: 1
 sitemap: false
 ---
-for (var i = 0; i > 50; i ++) {
+for (var i = 0; i &lt; 50; i ++) {
 	y0[i] = Math.random();
 	y1[i] = Math.random() + 1;
 }
