--- a/_posts/plotly_js/box/2015-08-11-fully-styled-box-plots.html
+++ b/_posts/plotly_js/box/2015-08-11-fully-styled-box-plots.html
@@ -29,7 +29,7 @@ var colors = ['rgba(93, 164, 214, 0.5)', 'rgba(255, 144, 14, 0.5)', 'rgba(44, 16
 
 var data = [];
 
-for ( var i = 0; i < xData.length; i ++ ) {
+for ( var i = 0; i &lt; xData.length; i ++ ) {
   var result = {
     type: 'box',
     y: yData[i],
