--- a/_posts/plotly_js/density-plots/2015-04-09-2dhistogram-contour-subplots.html
+++ b/_posts/plotly_js/density-plots/2015-04-09-2dhistogram-contour-subplots.html
@@ -29,7 +29,7 @@ var N = 2000,
 var step = (b - a) / (N - 1);
 var t = new Array(N), x = new Array(N), y = new Array(N);
 
-for(var i = 0; i < N; i++){
+for(var i = 0; i &lt; N; i++){
   t[i] = a + step * i;
   x[i] = (Math.pow(t[i], 3)) + (0.3 * normal() );
   y[i] = (Math.pow(t[i], 6)) + (0.3 * normal() );
