--- a/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
+++ b/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
@@ -48,7 +48,7 @@ var layout = {
   }
 };
 
-for ( var i = 0; i < yValues.length; i++ ) {
+for ( var i = 0; i &lt; yValues.length; i++ ) {
   for ( var j = 0; j < xValues.length; j++ ) {
     var currentValue = zValues[i][j];
     if (currentValue != 0.0) {
