--- a/_posts/plotly_js/heatmap/2015-08-12-heatmap-with-unequal-block-sizes.html
+++ b/_posts/plotly_js/heatmap/2015-08-12-heatmap-with-unequal-block-sizes.html
@@ -21,7 +21,7 @@ var finalX = [];
 var finalY = [];
 
 //spiral
-for(var i = 0; i <th.length; i++){
+for(var i = 0; i &lt;th.length; i++){
   var a = 1.120529;
   var b = 0.306349;
   var r = a * Math.exp((-b) * th[i]);
