--- a/_posts/plotly_js/line-plots/2015-08-07-labelling-with-annotations.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-labelling-with-annotations.html
@@ -32,7 +32,7 @@ var labels = ['Television', 'Newspaper', 'Internet', 'Radio'];
 
 var data = [];
 
-for ( var i = 0 ; i < xData.length ; i++ ) {
+for ( var i = 0 ; i &lt; xData.length ; i++ ) {
   var result = {
     x: xData[i],
     y: yData[i],
@@ -124,7 +124,7 @@ var layout = {
   ]
 };
 
-for( var i = 0 ; i < xData.length ; i++ ) {
+for( var i = 0 ; i &lt; xData.length ; i++ ) {
   var result = {
     xref: 'paper',
     x: 0.05,
