--- a/_posts/plotly_js/lines-on-maps/2015-08-12-us-flight-paths-map.html
+++ b/_posts/plotly_js/lines-on-maps/2015-08-12-us-flight-paths-map.html
@@ -37,7 +37,7 @@ function scattergeomarkers() {
   }
 
   //Flightpaths
-  for ( var i = 0 ; i < startLon.length ; i++){
+  for ( var i = 0 ; i &lt; startLon.length ; i++){
     var opacityValue = cnt[i]/getMaxOfArray(cnt);
     console.log(opacityValue);
     var result2 = {
