--- a/_posts/plotly_js/lines-on-maps/2015-11-07-lines-on-orthographic.html
+++ b/_posts/plotly_js/lines-on-maps/2015-11-07-lines-on-orthographic.html
@@ -11,7 +11,7 @@ function scattergeolines('myDiv') {
     lon = _.range(-180, 180, 0.5),
     data = [];
 
-    for(var i = 0; i < colors.length; i++) {
+    for(var i = 0; i &lt; colors.length; i++) {
         data.push({
             type: 'scattergeo',
             mode: 'lines',
