Get rid of empty file and one last < replacement

--- a/_posts/plotly_js/box/2015-08-11-rainbow-box-plot.html
+++ b/_posts/plotly_js/box/2015-08-11-rainbow-box-plot.html
@@ -6,24 +6,18 @@ suite: box
 order: 12
 sitemap: false
 ---
-
 var boxNumber = 30;
 var boxColor = [];
 var allColors = numeric.linspace(0, 360, boxNumber);
 var data = [];
 var yValues = [];
 
-// generate an array of rainbow colors by fixing the saturation and lightness of the HSL representation of colour
-// and marching around the hue.
-// Plotly accepts any CSS color format, see e.g. http://www.w3schools.com/cssref/css_colors_legal.asp.
+//Colors
 
-for( var i = 0; i < boxNumber;  i++ ){
+for( var i = 0; i &lt; boxNumber;  i++ ){
   var result = 'hsl('+ allColors[i] +',50%'+',50%)';
   boxColor.push(result);
 }
-
-// Each box is represented by a Trace that contains the data, the type, and the colour.
-// Use list comprehension to describe N boxes, each with a different colour and with different randomly generated data:
 
 function getRandomArbitrary(min, max) {
   return Math.random() * (max - min) + min;
@@ -31,7 +25,7 @@ function getRandomArbitrary(min, max) {
 
 //Create Y Values
 
-for( var i = 0; i < boxNumber;  i++ ){
+for( var i = 0; i &lt; boxNumber;  i++ ){
   var ySingleArray = [];
     for( var j = 0; j < 10;  j++ ){
       var randomNum = getRandomArbitrary(0, 1);
@@ -43,7 +37,7 @@ for( var i = 0; i < boxNumber;  i++ ){
 
 //Create Traces
 
-for( var i = 0; i < boxNumber;  i++ ){
+for( var i = 0; i &lt; boxNumber;  i++ ){
   var result = {
     y: yValues[i],
     type:'box',
