Comment Spacing, a few more escape char, missing ;
Escape Char for code section:
replace < and > with &lt; and &gt

Add space after comments

Add missing ;

--- a/_posts/plotly_js/3d-cluster/2015-08-10-3d-point-cluster.html
+++ b/_posts/plotly_js/3d-cluster/2015-08-10-3d-point-cluster.html
@@ -16,7 +16,7 @@ function processData(allRows) {
   console.log(allRows);
   var x = [], y = [], z = [];
 
-  for (var i=0; i<allRows.length; i++) {
+  for (var i=0; i &lt; allRows.length; i++) {
     row = allRows[i];
     x.push( row['x'] );
     y.push( row['y'] );
@@ -29,24 +29,24 @@ function processData(allRows) {
 function threeDCluster(xValues, yValues, zValues, divID){
 
   var data = [{
-  mode: 'markers',
-  name: 'y',
-  type: 'scatter3d',
-  x: xValues,
-  y: yValues,
-  z: zValues,
-  marker: {
-     color: 'rgb(23, 190, 207)',
-     size: 2
-  }
-  },{
-  alphahull: 7,
-  name: 'y',
-  opacity: 0.1,
-  type: 'mesh3d',
-  x: xValues,
-  y: yValues,
-  z: zValues
+    mode: 'markers',
+    name: 'y',
+    type: 'scatter3d',
+    x: xValues,
+    y: yValues,
+    z: zValues,
+    marker: {
+       color: 'rgb(23, 190, 207)',
+       size: 2
+    }
+    },{
+    alphahull: 7,
+    name: 'y',
+    opacity: 0.1,
+    type: 'mesh3d',
+    x: xValues,
+    y: yValues,
+    z: zValues
   }];
 
   var layout = {
@@ -90,8 +90,7 @@ function threeDCluster(xValues, yValues, zValues, divID){
     },
     title: '3d point clustering',
     width: 477
-  }
-
+  };
 
   Plotly.newPlot('myDiv', data, layout);
 };
