--- a/_posts/plotly_js/box/2015-08-11-fully-styled-box-plots.html
+++ b/_posts/plotly_js/box/2015-08-11-fully-styled-box-plots.html
@@ -7,11 +7,11 @@ order: 10
 sitemap: false
 ---
 
-var xData = ['Carmelo<br>Anthony', 'Dwyane<br>Wade',
-      'Deron<br>Williams', 'Brook<br>Lopez',
-      'Damian<br>Lillard', 'David<br>West',
-      'Blake<br>Griffin', 'David<br>Lee',
-      'Demar<br>Derozan'];
+var xData = ['Carmelo&lt;br&gt;Anthony', 'Dwyane&lt;br&gt;Wade',
+      'Deron&lt;br&gt;Williams', 'Brook&lt;br&gt;Lopez',
+      'Damian&lt;br&gt;Lillard', 'David&lt;br&gt;West',
+      'Blake&lt;br&gt;Griffin', 'David&lt;br&gt;Lee',
+      'Demar&lt;br&gt;Derozan'];
 
 var yData = [
     ['30', '27', '21', '31', '25', '9', '20', '26', '29', '23', '37', '29','35', '29', '20', '34', '23', '34', '45', '30', '31', '29', '33', '34', '45', '23', '40', '20', '39', '27', '26', '29', '28', '25', '42', '20', '25', '9', '27', '31', '36', '42', '12', '15', '32', '29', '35', '30', '32', '6', '14', '9', '21', '37', '28', '29', '22', '32', '24', '50', '40', '41', '36', '36', '36', '31', '25', '36', '34', '26', '36', '22', '21', '27', '32', '21', '24', '28', '39'],
