--- a/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-world-robinson.html
+++ b/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth-world-robinson.html
@@ -80,7 +80,7 @@ function choroplethworld() {
     }];
 
     var layout = {
-        title: 'Pure alcohol consumption<br>among adults (age 15+) in 2010',
+        title: 'Pure alcohol consumption&lt;br&gt;among adults (age 15+) in 2010',
         geo: {
             projection: {
                 type: 'robinson'
