--- a/_posts/plotly_js/choropleth-maps/2015-08-10-countrygdp-choropleth-map.html
+++ b/_posts/plotly_js/choropleth-maps/2015-08-10-countrygdp-choropleth-map.html
@@ -34,12 +34,12 @@ function choroplethworld() {
         colorbar: {
           autotick: false,
           tickprefix: '$',
-          title: 'GDP<br>Billions US$'
+          title: 'GDP&lt;br&gt;Billions US$'
         }
     }];
 
     var layout = {
-        title: '2014 Global GDP<br>Source: <a href="https://www.cia.gov/library/publications/the-world-factbook/fields/2195.html"> CIA World Factbook</a>',
+        title: '2014 Global GDP&lt;br&gt;Source: &lt;a href="https://www.cia.gov/library/publications/the-world-factbook/fields/2195.html"&gt; CIA World Factbook&lt;/a&gt;',
         geo: {
             showframe: false,
             showcoastlines: false,
