--- a/_posts/plotly_js/choropleth-maps/2015-08-11-US-pop-by-state-choropleth.html
+++ b/_posts/plotly_js/choropleth-maps/2015-08-11-US-pop-by-state-choropleth.html
@@ -25,7 +25,7 @@ function createMap(error, statesCSV, citiesCSV) {
     ];
 
     var layout = {
-        title: '2014 US population by states<br>(Click on state to see population by cities)',
+        title: '2014 US population by states&lt;br&gt;(Click on state to see population by cities)',
         geo: {
             scope: 'usa',
             countrycolor: 'rgb(255, 255, 255)',
@@ -81,8 +81,8 @@ function makeBubbles(csv) {
         trace.lon.push(datum.lon);
         trace.lat.push(datum.lat);
         trace.text.push([
-            datum.name, '<br>',
-            '<b>Population:</b> ', datum.pop
+            datum.name, '&lt;br&gt;',
+            '&lt;br&gt;Population:&lt;br&gt; ', datum.pop
         ].join(''));
         trace.marker.size.push(datum.pop);
     });
