--- a/_posts/plotly_js/histogram/2015-04-09-stacked-histogram.html
+++ b/_posts/plotly_js/histogram/2015-04-09-stacked-histogram.html
@@ -6,8 +6,8 @@ suite: histogram
 order: 7
 sitemap: false
 ---
-var x0 = Math.random() * 500
-var x1 = Math.random() * 500 + 1
+var x0 = Math.random() * 500;
+var x1 = Math.random() * 500 + 1;
 var trace1 = {
   x: x0,
   type: 'histogram'
