change urls from /javascript-graphig-library/ to /javascript/

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -1,9 +1,10 @@
 ---
 title: "JavaScript Graphing Library | Plotly"
-permalink: /javascript-graphing-library/
+permalink: /javascript/
 description: Plotly's scientific JavaScript graphing library for web-applications and dashboards. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
 language: plotly_js
+redirect_from: /javascript-graphing-library/
 ---
 
 {% include ad-text.html %}
@@ -13,10 +14,10 @@ language: plotly_js
 <h3 class="centered">Plotly JavaScript Graphing Library</h3>
 
 <div class="row centered btnrow">
-	<a href="https://plot.ly/javascript-graphing-library/getting-started/" class="button no_underline">Getting Started</a>
-	<a href="https://plot.ly/javascript-graphing-library/reference/" class="button no_underline">Reference</a>
-	<a href="https://plot.ly/javascript-graphing-library/showcase/" class="button no_underline">Showcase</a>
-	<a href="https://plot.ly/javascript-graphing-library/plotlyjs-function-reference/" class="button no_underline">Plotly.js Functions</a>
+	<a href="https://plot.ly/javascript/getting-started/" class="button no_underline">Getting Started</a>
+	<a href="https://plot.ly/javascript/reference/" class="button no_underline">Reference</a>
+	<a href="https://plot.ly/javascript/showcase/" class="button no_underline">Showcase</a>
+	<a href="https://plot.ly/javascript/plotlyjs-function-reference/" class="button no_underline">Plotly.js Functions</a>
 </div>
 
 	<p style="text-align: center;">
