--- a/_posts/2015-07-13-eula_index.html
+++ b/_posts/2015-07-13-eula_index.html
@@ -9,8 +9,8 @@ language: eula
 <h1 class="centered">Plotly.js EULA</h1>
 <h3 class="centered">Plotly JavaScript Graphing Library</h3>
 	<div class="row centered btnrow">
-		<a href="https://plot.ly/javascript-graphing-library/reference/" class="button no_underline">Reference</a>
-		<a href="https://plot.ly/javascript-graphing-library/showcase/" class="button no_underline">Showcase</a>
+		<a href="https://plot.ly/javascript/reference/" class="button no_underline">Reference</a>
+		<a href="https://plot.ly/javascript/showcase/" class="button no_underline">Showcase</a>
 		<a href="https://plot.ly/product/enterprise/get-in-touch/" class="button no_underline">Purchase</a>
 	</div>
 
