--- a/_posts/plotly_js/eula/2015-07-11-eula.html
+++ b/_posts/plotly_js/eula/2015-07-11-eula.html
@@ -1,7 +1,7 @@
 ---
 title: Plotly EULA
 name: Plotly.js
-permalink: javascript-graphing-library/eula/
+permalink: javascript/eula/
 description: End User License Agreement for Plotly.js and other Plotly products
 layout: langindex
 language: plotly_js
@@ -9,6 +9,7 @@ page_type: example_index
 has_thumbnail: false
 display_as: chart_type
 sitemap: false
+redirect_from: javascript-graphing-library/eula/
 ---
 <h2 style="padding-top: 50px;text-align: center;">Plotly EULA</h2>
 <div style="
