--- a/_posts/plotly_js/font/2015-04-09-font_plotly_js_index.html
+++ b/_posts/plotly_js/font/2015-04-09-font_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Text and Font Styling | Examples | Plotly
 name: Text and Font Styling
-permalink: javascript-graphing-library/font/
+permalink: javascript/font/
 description: How to edit and style the font of graphs in javascript.
 layout: base
 thumbnail: /images/font.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: false
 display_as: layout_opt
+redirect_from: javascript-graphing-library/font/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","font" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
