--- a/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
+++ b/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
@@ -1,10 +1,11 @@
 ---
 title: Getting Started with Plotly.js
 name: Getting Started with Plotly.js
-permalink: javascript-graphing-library/getting-started/
+permalink: javascript/getting-started/
 description: Getting Started with Plotly for JavaScript.
 layout: getstart
 language: plotly_js
+redirect_from: javascript-graphing-library/getting-started/
 ---
 
 <h1 style="margin-top:-200px;">Getting started: Plotly.js</h1>
@@ -13,7 +14,7 @@ language: plotly_js
         <h2>Download</h2>
         <div class="content-box">
             <p >
-                Download the minified Plotly.js source code and dependencies for <a href="https://plot.ly/javascript-graphing-library/#basic-charts">Basic Charts</a>.
+                Download the minified Plotly.js source code and dependencies for <a href="https://plot.ly/javascript/#basic-charts">Basic Charts</a>.
             </p>
 
             <p>
@@ -85,5 +86,5 @@ language: plotly_js
     </section>
 
 <div class="row centered btnrow">
-	<a href="/javascript-graphing-library/" class="button no_underline">more examples</a>
+	<a href="/javascript/" class="button no_underline">more examples</a>
 </div>
