--- a/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-scatter_maps_plotly_js_index.html
+++ b/_posts/plotly_js/scatter-plot-on-maps/2015-07-11-scatter_maps_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Plotly.js Scatter Plots on Mapss | Examples | Plotly
 name: Scatter Plots on Maps
-permalink: javascript-graphing-library/scatter-plots-on-maps/
+permalink: javascript/scatter-plots-on-maps/
 description: How to make scatter plots on maps in JavaScript. Scatter plots on maps highlight geographic areas and can be colored by value.
 layout: base
 thumbnail: /images/scatter-plot-on-maps.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: advanced_charts
+redirect_from: javascript-graphing-library/scatter-plots-on-maps/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","scatter-plots-on-maps" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
