--- a/_posts/plotly_js/sizing/2015-04-09-sizing_plotly_js_index.html
+++ b/_posts/plotly_js/sizing/2015-04-09-sizing_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Setting Graph Size | Examples | Plotly
 name: Setting Graph Size
-permalink: javascript-graphing-library/setting-graph-size/
+permalink: javascript/setting-graph-size/
 description: How to change the size of graphs in javascript.
 layout: base
 thumbnail: /images/sizing.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: false
 display_as: layout_opt
+redirect_from: javascript-graphing-library/setting-graph-size/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","sizing" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
