--- a/_posts/plotly_js/3d-scatter/2015-04-09-3d-scatter_plotly_js_index.html
+++ b/_posts/plotly_js/3d-scatter/2015-04-09-3d-scatter_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library 3D Scatter Plots | Examples | Plotly
 name: 3D Scatter Plots
-permalink: javascript-graphing-library/3d-scatter-plots/
+permalink: javascript/3d-scatter-plots/
 description: How to make 3D scatter plots in javascript.
 layout: base
 thumbnail: /images/3d-scatter.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: 3d_charts
+redirect_from: javascript-graphing-library/3d-scatter-plots/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","3d-scatter" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
