--- a/_posts/plotly_js/3d-surface/2015-04-09-3d-surface_plotly_js_index.html
+++ b/_posts/plotly_js/3d-surface/2015-04-09-3d-surface_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library 3D Surface Plots | Examples | Plotly
 name: 3D Surface Plots
-permalink: javascript-graphing-library/3d-surface-plots/
+permalink: javascript/3d-surface-plots/
 description: How to make 3D surface plots in javascript.
 layout: base
 thumbnail: /images/3d-surface.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: 3d_charts
+redirect_from: javascript-graphing-library/3d-surface-plots/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","3d-surface" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
