--- a/_posts/plotly_js/annotations/2015-04-09-annotations_plotly_js_index.html
+++ b/_posts/plotly_js/annotations/2015-04-09-annotations_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Text and Annotations | Examples | Plotly
 name: Text and Annotations
-permalink: javascript-graphing-library/text-and-annotations/
+permalink: javascript/text-and-annotations/
 description: How to add text labels and annotations to plots in javascript.
 layout: base
 thumbnail: /images/annotations.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: false
 display_as: layout_opt
+redirect_from: javascript-graphing-library/text-and-annotations/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","annotations" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
