--- a/_posts/plotly_js/area/2015-04-09-area_plotly_js_index.html
+++ b/_posts/plotly_js/area/2015-04-09-area_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Filled Area Plots | Examples | Plotly
 name: Filled Area Plots
-permalink: javascript-graphing-library/filled-area-plots/
+permalink: javascript/filled-area-plots/
 description: How to make a filled area plot in javascript. An area chart displays a solid color between the traces of a graph.
 layout: base
 thumbnail: /images/area.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 9
+redirect_from: javascript-graphing-library/filled-area-plots/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","area" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
