--- a/_posts/plotly_js/axes/2015-04-09-axes_plotly_js_index.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Axes | Examples | Plotly
 name: Axes
-permalink: javascript-graphing-library/axes/
+permalink: javascript/axes/
 description: How to adjust axes properties in javascript. Seven examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.
 layout: base
 thumbnail: /images/axes.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: false
 display_as: layout_opt
+redirect_from: javascript-graphing-library/axes/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","axes" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
