--- a/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Bar Charts | Examples | Plotly
 name: Bar Charts
-permalink: javascript-graphing-library/bar-charts/
+permalink: javascript/bar-charts/
 description: How to make a bar chart in javascript. Seven examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
 thumbnail: /images/bar.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 3
+redirect_from: javascript-graphing-library/bar-charts/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","bar" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
