--- a/_posts/plotly_js/bubble/2015-04-09-bubble_plotly_js_index.html
+++ b/_posts/plotly_js/bubble/2015-04-09-bubble_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Bubble Charts | Examples | Plotly
 name: Bubble Charts
-permalink: javascript-graphing-library/bubble-charts/
+permalink: javascript/bubble-charts/
 description: How to make a bubble chart in javascript. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
 thumbnail: /images/bubble.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 4
+redirect_from: javascript-graphing-library/bubble-charts/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","bubble" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
