--- a/_posts/plotly_js/callbacks-click/2015-04-09-click_index.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click_index.html
@@ -1,7 +1,7 @@
 ---
 title: Binding to Click Events in JavaScript Charts | Examples | Plotly
 name: Click Events
-permalink: javascript-graphing-library/click-events/
+permalink: javascript/click-events/
 description: How to bind callback functions to click events in JavaScript charts. 
 layout: base
 thumbnail: /images/click.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_events
 order: 0
+redirect_from: javascript-graphing-library/click-events/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","click-events" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
