--- a/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
+++ b/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
@@ -1,7 +1,7 @@
 ---
 title: Dropdowns in JavaScript Charts | Examples | Plotly
 name: Dropdown Events
-permalink: https://plot.ly/javascript-graphing-library/high-dimension-data/
+permalink: https://plot.ly/javascript/high-dimension-data/
 description: How to bind callback functions to custom dropdowns in JavaScript charts. 
 layout: base
 thumbnail: /images/dropdown.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_events
 order: 20
+redirect_from: https://plot.ly/javascript-graphing-library/high-dimension-data/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","dropdowns-events" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
