--- a/_posts/plotly_js/callbacks-hover/2015-04-09-hover_index.html
+++ b/_posts/plotly_js/callbacks-hover/2015-04-09-hover_index.html
@@ -1,7 +1,7 @@
 ---
 title: Hover Events in JavaScript Charts | Examples | Plotly
 name: Hover Events
-permalink: javascript-graphing-library/hover-events/
+permalink: javascript/hover-events/
 description: How to bind callback functions to hover events in JavaScript charts. 
 layout: base
 thumbnail: /images/hover.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_events
 order: 1
+redirect_from: javascript-graphing-library/hover-events/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","hover-events" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
