--- a/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
+++ b/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
@@ -1,7 +1,7 @@
 ---
 title: Zoom Events in JavaScript Charts | Examples | Plotly
 name: Zoom Events
-permalink: javascript-graphing-library/zoom-events/
+permalink: javascript/zoom-events/
 description: How to bind callback functions to zoom events in JavaScript charts. 
 layout: base
 thumbnail: /images/zoom.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_events
 order: 3
+redirect_from: javascript-graphing-library/zoom-events/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","hover-events" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
