--- a/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth_plotly_js_index.html
+++ b/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Choropleth Maps | Examples | Plotly
 name: Choropleth Maps
-permalink: javascript-graphing-library/choropleth-maps/
+permalink: javascript/choropleth-maps/
 description: How to make a choropleth map in JavaScript. A choropleth map shades geographic regions by value.
 layout: base
 thumbnail: /images/choropleth.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: advanced_charts
+redirect_from: javascript-graphing-library/choropleth-maps/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","choropleth-maps" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
