--- a/_posts/plotly_js/colorscales/2015-04-09-colorscales_plotlyjs_index.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-colorscales_plotlyjs_index.html
@@ -1,7 +1,7 @@
 ---
 title: Colorscales in JavaScript for contours and heatmaps
 name: Heatmap and Contour Colorscales
-permalink: javascript-graphing-library/heatmap-and-contour-colorscales/
+permalink: javascript/heatmap-and-contour-colorscales/
 description: How to set colorscales and heatmap colorscales in JavaScript and Plotly. Divergent, sequential, and qualitative colorscales.
 layout: base
 thumbnail: /images/colorbars.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 8
+redirect_from: javascript-graphing-library/heatmap-and-contour-colorscales/
 ---
 {% assign examples = site.posts | where:'language','plotly_js' | where:'suite','colorscales' | sort: 'order' %}
 {% include auto_examples.html examples=examples %}
