--- a/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
+++ b/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
@@ -1,7 +1,7 @@
 ---
 title: JavaScript 2d Density Plots | Examples | Plotly
 name: 2d Density Plots
-permalink: javascript-graphing-library/2d-density-plots/
+permalink: javascript/2d-density-plots/
 description: How to make a 2d density plot in JavaScript. Examples of density plots with kernel density estimations, custom color-scales, and smoothing.
 layout: base
 thumbnail: /images/2d-density-plot.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: advanced_charts
+redirect_from: javascript-graphing-library/2d-density-plots/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite", "2d-density-plot" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
