--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar_plotly_js_index.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Error Bars | Examples | Plotly
 name: Error Bars
-permalink: javascript-graphing-library/error-bars/
+permalink: javascript/error-bars/
 description: How to add error bars to a line, scatter, or bar chart. Seven examples of symmetric, asymmetric, horizontal, and colored error bars.
 layout: base
 thumbnail: /images/error-bar.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: advanced_charts
+redirect_from: javascript-graphing-library/error-bars/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","error-bar" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
