--- a/_posts/plotly_js/histogram2d/2015-04-09-histogram2d_plotly_js_index.html
+++ b/_posts/plotly_js/histogram2d/2015-04-09-histogram2d_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library 2D Histograms | Examples | Plotly
 name: 2D Histograms
-permalink: javascript-graphing-library/2D-Histogram/
+permalink: javascript/2D-Histogram/
 description: How to make a 2D histogram in javascript. A 2D histogram is a visualization of a bivariate distribution.
 layout: base
 thumbnail: /images/histogram2d.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: advanced_charts
+redirect_from: javascript-graphing-library/2D-Histogram/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","histogram2d" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
