--- a/_posts/plotly_js/horizontal-bar/2015-04-09-horizontal_bar_plotlyjs_index.html
+++ b/_posts/plotly_js/horizontal-bar/2015-04-09-horizontal_bar_plotlyjs_index.html
@@ -1,7 +1,7 @@
 ---
 title: Plotly.js Horizontal Bar Charts | Examples | Plotly
 name: Horizontal Bar Charts
-permalink: javascript-graphing-library/horizontal-bar-charts/
+permalink: javascript/horizontal-bar-charts/
 description: How to make a hortizontal bar chart in JavaScript.
 layout: base
 thumbnail: /images/horizontal-bar.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 3
+redirect_from: javascript-graphing-library/horizontal-bar-charts/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","horizontal-bar" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
