--- a/_posts/plotly_js/insets/2015-04-09-insets_plotly_js_index.html
+++ b/_posts/plotly_js/insets/2015-04-09-insets_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Inset Plots | Examples | Plotly
 name: Inset Plots
-permalink: javascript-graphing-library/insets/
+permalink: javascript/insets/
 description: How to make an inset graph in javascript.
 layout: base
 thumbnail: /images/insets.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 15
+redirect_from: javascript-graphing-library/insets/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","insets" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
