--- a/_posts/plotly_js/labels/2015-04-09-labels_plotly_js_index.html
+++ b/_posts/plotly_js/labels/2015-04-09-labels_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Setting the Title, Legend Entries, and Axis Titles | Examples | Plotly
 name: Setting the Title, Legend Entries, and Axis Titles
-permalink: javascript-graphing-library/figure-labels/
+permalink: javascript/figure-labels/
 description: How to set the title, legend-entries, and axis-titles in javascript.
 layout: base
 thumbnail: /images/labels.png
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: false
 display_as: layout_opt
+redirect_from: javascript-graphing-library/figure-labels/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","labels" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
