--- a/_posts/plotly_js/line-plots/2015-07-24-line-plots-index.html
+++ b/_posts/plotly_js/line-plots/2015-07-24-line-plots-index.html
@@ -1,7 +1,7 @@
 ---
 title: Plotly.js Line Charts | Examples | Plotly
 name: Line Charts
-permalink: javascript-graphing-library/line-charts/
+permalink: javascript/line-charts/
 description: How to make line charts in JavaScript.
 layout: base
 thumbnail: /images/line-plots.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 1
+redirect_from: javascript-graphing-library/line-charts/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","line-plots" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
