--- a/_posts/plotly_js/line_and_scatter/2015-04-09-line_and_scatter_plotly_js_index.html
+++ b/_posts/plotly_js/line_and_scatter/2015-04-09-line_and_scatter_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library and Scatter Plots | Examples | Plotly
 name: Scatter Plots
-permalink: javascript-graphing-library/line-and-scatter/
+permalink: javascript/line-and-scatter/
 description: How to make line and scatter plots in JavaScript. Examples of basic and colored line and scatter plots.
 layout: base
 thumbnail: /images/line_and_scatter.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 1
+redirect_from: javascript-graphing-library/line-and-scatter/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","line_and_scatter" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
