--- a/_posts/plotly_js/lines-on-maps/2015-07-11-lines_on_maps_plotly_js_index.html
+++ b/_posts/plotly_js/lines-on-maps/2015-07-11-lines_on_maps_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Plotly.js Lines on Maps | Examples | Plotly
 name: Lines on Maps
-permalink: javascript-graphing-library/lines-on-maps/
+permalink: javascript/lines-on-maps/
 description: How to draw lines, great circles, and contours on maps in JavaScript. Lines on maps can show distance between geographic points or be contour lines (isolines, isopleths, or isarithms).
 layout: base
 thumbnail: /images/flight-paths.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: advanced_charts
 order: 3
+redirect_from: javascript-graphing-library/lines-on-maps/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","lines-on-maps" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
