--- a/_posts/plotly_js/mixed/2015-04-09-mixed_plotly_js_index.html
+++ b/_posts/plotly_js/mixed/2015-04-09-mixed_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Mixed Chart Types | Examples | Plotly
 name: Multiple Chart Types
-permalink: javascript-graphing-library/graphing-multiple-chart-types/
+permalink: javascript/graphing-multiple-chart-types/
 description: How to makes figures with mixed chart types in JavaScript. Examples of a contour plot with a scatter plot and a bar chart with a line chart.
 layout: base
 thumbnail: /images/mixed.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 12
+redirect_from: javascript-graphing-library/graphing-multiple-chart-types/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","mixed" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
