--- a/_posts/plotly_js/multiple-axes/2015-04-09-multiple-axes_plotly_js_index.html
+++ b/_posts/plotly_js/multiple-axes/2015-04-09-multiple-axes_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Multiple Axes | Examples | Plotly
 name: Multiple Axes
-permalink: javascript-graphing-library/multiple-axes/
+permalink: javascript/multiple-axes/
 description: How to make a graph with multiple axes in javascript.
 layout: base
 thumbnail: /images/multiple-axes.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 14
+redirect_from: javascript-graphing-library/multiple-axes/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","multiple-axes" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
