--- a/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
+++ b/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Pie Charts | Examples | Plotly
 name: Pie Charts
-permalink: javascript-graphing-library/pie-chart/
+permalink: javascript/pie-chart/
 description: How to graph pie charts in javascript. Examples of pie charts, donut charts and pie chart subplots.
 layout: base
 thumbnail: /images/pie-chart.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 16
+redirect_from: javascript-graphing-library/pie-chart/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","pie" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
