--- a/_posts/plotly_js/polar/2015-04-09-polar_plotly_js_index.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Polar Charts | Examples | Plotly
 name: Polar Charts
-permalink: javascript-graphing-library/polar-chart/
+permalink: javascript/polar-chart/
 description: How to graph polar charts in javascript. Seven examples of polar line, polar scatter and polar area charts.
 layout: base
 thumbnail: /images/polar-scatter.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 11
+redirect_from: javascript-graphing-library/polar-chart/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","polar" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
