--- a/_posts/plotly_js/shapes/2015-06-19-shape_plotlyjs_index.html
+++ b/_posts/plotly_js/shapes/2015-06-19-shape_plotlyjs_index.html
@@ -1,7 +1,7 @@
 ---
 title: JavaScript SVG Shapes | Examples | Plotly
 name: Shapes
-permalink: javascript-graphing-library/shapes/
+permalink: javascript/shapes/
 description: How to make arbitrary SVG shapes in JavaScript. Examples of lines, circle, rectangle, and path.
 layout: base
 thumbnail: /images/shape.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 12
+redirect_from: javascript-graphing-library/shapes/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","shape" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
