--- a/_posts/plotly_js/subplots/2015-04-09-subplots_plotly_js_index.html
+++ b/_posts/plotly_js/subplots/2015-04-09-subplots_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Subplots | Examples | Plotly
 name: Subplots
-permalink: javascript-graphing-library/subplots/
+permalink: javascript/subplots/
 description: How to make subplots in javascript. Seven examples of stacked, custom-sized, and gridded subplots.
 layout: base
 thumbnail: /images/subplots.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 16
+redirect_from: javascript-graphing-library/subplots/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","subplots" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
