--- a/_posts/plotly_js/time-series/2015-04-09-time-series_plotly_js_index.html
+++ b/_posts/plotly_js/time-series/2015-04-09-time-series_plotly_js_index.html
@@ -1,7 +1,7 @@
 ---
 title: Javascript Graphing Library Time Series | Examples | Plotly
 name: Time Series
-permalink: javascript-graphing-library/time-series/
+permalink: javascript/time-series/
 description: How to plot date and time in javascript. An example of a time-series plot.
 layout: base
 thumbnail: /images/time-series.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 5
+redirect_from: javascript-graphing-library/time-series/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","time-series" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
