--- a/_posts/plotly_js/wind-rose/2015-04-09-wind-rose_plotlyjs_index.html
+++ b/_posts/plotly_js/wind-rose/2015-04-09-wind-rose_plotlyjs_index.html
@@ -1,7 +1,7 @@
 ---
 title: JavaScript Wind Rose Charts | Examples | Plotly
 name: Wind Rose Charts
-permalink: javascript-graphing-library/wind-rose-charts/
+permalink: javascript/wind-rose-charts/
 description: How to graph wind rose charts in JavaScript. 
 layout: base
 thumbnail: /images/wind-rose.png
@@ -10,6 +10,7 @@ page_type: example_index
 has_thumbnail: true
 display_as: chart_type
 order: 10
+redirect_from: javascript-graphing-library/wind-rose-charts/
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","wind-rose" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
