--- a/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
+++ b/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
@@ -1,8 +1,8 @@
 ---
 title: Dropdowns in JavaScript Charts | Examples | Plotly
 name: Dropdown Events
-permalink: https://plot.ly/javascript/high-dimension-data/
-description: How to bind callback functions to custom dropdowns in JavaScript charts. 
+permalink: javascript/high-dimension-data/
+description: How to bind callback functions to custom dropdowns in JavaScript charts.
 layout: base
 thumbnail: /images/dropdown.png
 language: plotly_js
