--- a/_posts/plotly_js/callbacks-sliders/2015-04-09-sliders_index.html
+++ b/_posts/plotly_js/callbacks-sliders/2015-04-09-sliders_index.html
@@ -1,8 +1,8 @@
 ---
 title: Sliders in JavaScript Charts | Examples | Plotly
 name: Slider Events
-permalink: https://plot.ly/javascript/range-slider/
-description: How to bind callback functions to custom dropdowns in JavaScript charts. 
+permalink: javascript/range-slider/
+description: How to bind callback functions to custom dropdowns in JavaScript charts.
 layout: base
 thumbnail: /images/sliders.png
 language: plotly_js
