--- a/_posts/2015-04-05-matplotlib-index.html
+++ b/_posts/2015-04-05-matplotlib-index.html
@@ -1,5 +1,5 @@
 ---
-title: "Matplotlib Figures Online | Plotly"
+title: Matplotlib Figures Online | Plotly
 permalink: /matplotlib/
 description: Publish your Matplotlib figures to the web with one line of code! Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
