--- a/_posts/2015-04-05-node_js-index.html
+++ b/_posts/2015-04-05-node_js-index.html
@@ -1,5 +1,5 @@
 ---
-title: "Nodejs Graphing Library | Plotly"
+title: Nodejs Graphing Library | Plotly
 permalink: /nodejs/
 description: Plotly's Nodejs graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
