--- a/_posts/2015-07-13-eula_index.html
+++ b/_posts/2015-07-13-eula_index.html
@@ -1,5 +1,5 @@
 ---
-title: "EULA | Plotly"
+title: EULA | Plotly
 permalink: /eula
 description: The End User License Agreement for Plotly.js and other Plotly products
 layout: langindex
