--- a/javascript/index.html
+++ b/javascript/index.html
@@ -865,7 +865,7 @@
 			
 		
 			
-				<a href="https://plot.ly/javascript/high-dimension-data/">
+				<a href="/javascript/high-dimension-data/">
 					<div class="alltutcol">
 						<img class="thumbnail" alt="Dropdown Events" src="https://plot.ly/gh-pages/documentation/static//images/dropdown.png" >
 						<div class="titlecenter">
@@ -876,7 +876,7 @@
 			
 		
 			
-				<a href="https://plot.ly/javascript/range-slider/">
+				<a href="/javascript/range-slider/">
 					<div class="alltutcol">
 						<img class="thumbnail" alt="Slider Events" src="https://plot.ly/gh-pages/documentation/static//images/sliders.png" >
 						<div class="titlecenter">
