--- a/https:/plot.ly/javascript-graphing-library/high-dimension-data/index.html
+++ b/https:/plot.ly/javascript-graphing-library/high-dimension-data/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
 <title>Redirecting...</title>
-<link rel=canonical href="/https:/plot.ly/javascript/high-dimension-data/">
-<meta http-equiv=refresh content="0; url=/https:/plot.ly/javascript/high-dimension-data/">
+<link rel=canonical href="/javascript/high-dimension-data/">
+<meta http-equiv=refresh content="0; url=/javascript/high-dimension-data/">
 <h1>Redirecting...</h1>
-<a href="/https:/plot.ly/javascript/high-dimension-data/">Click here if you are not redirected.</a>
-<script>location='/https:/plot.ly/javascript/high-dimension-data/'</script>
+<a href="/javascript/high-dimension-data/">Click here if you are not redirected.</a>
+<script>location='/javascript/high-dimension-data/'</script>
