--- a/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
+++ b/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
@@ -4,11 +4,11 @@ name: Remove Trace from Plot
 permalink: javascript-graphing-library/remove-trace/
 description: How to remove a trace from a plot in JavaScript.
 layout: base
-thumbnail: /images/line-plots.png
+thumbnail: /images/remove-trace.png
 language: plotly_js
 page_type: example_index
-has_thumbnail: false
-display_as: layout_opt
+has_thumbnail: true
+display_as: chart_events
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","remove-trace" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
