--- a/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
+++ b/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
@@ -11,5 +11,10 @@ has_thumbnail: true
 display_as: chart_type
 order: 17
 ---
+
+<h5 class="centered">
+  Please note that the inclusion of the PlotlyFinance javascript library is necessary when making candlestick charts.
+</h5>
+
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","candlestick" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
