--- a/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
+++ b/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
@@ -11,5 +11,10 @@ has_thumbnail: true
 display_as: chart_type
 order: 18
 ---
+
+<h5 class="centered">
+  Please note that the inclusion of the PlotlyFinance javascript library is necessary when making OHLC charts.
+</h5>
+
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","ohlc" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
